--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,10 +1,10 @@
 <nav>
   <ul *ngIf="isLoggedIn()">
     <li>
-      <button md-raised-button color="primary" routerLink="/">Calculator</button>
+      <button mat-raised-button color="primary" routerLink="/">Calculator</button>
     </li>
     <li>
-      <button md-raised-button color="primary" routerLink="/test-route">Test</button>
+      <button mat-raised-button color="primary" routerLink="/test-route">Test</button>
     </li>
   </ul>
 </nav>
