--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
-<md-card class="loginCard" >
+<mat-card class="loginCard" >
   <form [formGroup]="loginForm" (ngSubmit)="doLogin()">
     <input formControlName="email" type="email" placeholder="Your email">
     <input formControlName="password" type="password" placeholder="Your password">
-    <button md-raised-button color="primary" type="submit">Log in</button>
+    <button mat-raised-button color="primary" type="submit">Log in</button>
   </form>
-</md-card>
+</mat-card>
 
