--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -26,7 +26,7 @@
   </md-form-field>
 </div>
 
-<button mat-raised-button color="primary" class="weightPopUp" (click)="addToTable()">Input Weights</button>
+<button mat-raised-button color="primary" class="weightPopUp" (click)="addToTable()">Calculate Goals</button>
 
 
 <div class="benchTableContainer">
