--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,7 +16,7 @@
 }
 
 .content {
-  background-color: blanchedalmond;
+  background-color: #5a7287;
   width: 100%;
   height: 100%;
   top: 150px;
