--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .titleBar {
-  background-color: blue;
+  background: radial-gradient(black, darkblue, darkred);
   width: 100%;
   height: 150px;
   position: fixed;
